# discord_relay

./: Cargo.toml  README.md
src/: main.rs
